<resources>
    <string name="app_name">Toinwork</string>
    <string name="action_settings">Settings</string>
    <string name="workplace">工作区</string>
    <string name="message">消息</string>
    <string name="contact">通讯录</string>
    <string name="setting">设置</string>
    <string name="splash_content">专注快速构建IT业务</string>
    <string name="login">登陆</string>
    <string name="toinwork">Toinwork.com</string>
    <string name="no_data">没有数据</string>
    <string name="domain_intro">Toinwork是一款开源的服务端程序，APP客户端是为了更好的协作而诞生，所以请您设置自己的服务器域名。</string>
    <string name="hint_domain">请输入域名</string>

    <string name="edit">编辑</string>
    <string name="cancle">取消</string>
    <string name="QQ">QQ</string>
    <string name="weixin_circle">朋友圈</string>
    <string name="weixin">微信</string>
    <string name="sina">新浪微博</string>
    <string name="sms">短信</string>
    <string name="copy_url">复制链接</string>
    <string name="no_store">暂无数据</string>
</resources>
