<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_back"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#a0000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_qq"
                style="@style/share"
                android:drawableTop="@mipmap/qq"
                android:text="@string/QQ" />

            <TextView
                android:id="@+id/tv_weixin_circle"
                style="@style/share"
                android:drawableTop="@mipmap/weixin_circle"
                android:text="@string/weixin_circle" />

            <TextView
                android:id="@+id/tv_weixin"
                style="@style/share"
                android:drawableTop="@mipmap/weixin"
                android:text="@string/weixin" />

            <TextView
                android:id="@+id/tv_sina"
                style="@style/share"
                android:drawableTop="@mipmap/sina"
                android:text="@string/sina" />

            <TextView
                android:id="@+id/tv_sms"
                style="@style/share"
                android:drawableTop="@mipmap/sms"
                android:text="@string/sms" />

            <TextView
                android:id="@+id/tv_copy"
                style="@style/share"
                android:drawableTop="@mipmap/copy"
                android:text="@string/copy_url" />

        </LinearLayout>

        <View
            style="@style/line"
            android:background="@color/action_color" />

        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:text="@string/cancle"
            android:textColor="@color/action_color"
            android:textSize="@dimen/comment_textSize" />
    </LinearLayout>

</RelativeLayout>