<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/action_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.toin.work.widget.circleImageView.CircleImageView
            android:id="@+id/img_header"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_centerHorizontal="true"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="hanbin"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_60"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_workplace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@mipmap/setting"
            android:drawablePadding="@dimen/dp_5"
            android:gravity="center_vertical"
            android:text="@string/workplace"
            android:textColor="@color/white"
            android:textSize="@dimen/comment_textSize" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_15"
            android:drawableLeft="@mipmap/setting"
            android:drawablePadding="@dimen/dp_5"
            android:gravity="center_vertical"
            android:text="@string/message"
            android:textColor="@color/white"
            android:textSize="@dimen/comment_textSize" />

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_15"
            android:drawableLeft="@mipmap/setting"
            android:drawablePadding="@dimen/dp_5"
            android:gravity="center_vertical"
            android:text="@string/contact"
            android:textColor="@color/white"
            android:textSize="@dimen/comment_textSize" />

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_15"
            android:drawableLeft="@mipmap/setting"
            android:drawablePadding="@dimen/dp_5"
            android:gravity="center_vertical"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="@dimen/comment_textSize" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_15"
        android:text="@string/toinwork"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20" />

</RelativeLayout>